# visualiserbox

./: Cargo.toml  README.md  TODO.org  config.toml
programs/: example1  example2  fractals
src/: animation.rs  app.rs  config.rs  drawing.rs  mac_audio.rs  main.rs  program.rs  recorder.rs  rect.rs  ringbuffer.rs  sound.rs  texteditor.rs  utils.rs
