[package]
name = "visualiserbox"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
colog = "1.3.0"
ffmpeg-sidecar = "2.1.0"
log = "0.4.27"
rand = "0.9.2"
raylib = "5.5.1"
rfd = "0.15.4"
serde = { version = "1.0.219", features = ["derive"] }
toml = "0.9.5"

[dependencies.uuid]
version = "1.18.0"
features = [
    "v4",
]

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6.3"
objc2-core-audio = "0.3.2"
objc2-core-audio-types = "0.3.2"
objc2-core-foundation = "0.3.2"
objc2-foundation = "0.3.2"